5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1845_2221.log
== TEST (2019-06-24 01:03:24) 
-- CODE:
from numpy import*

media1 = input("Digite a primeira nota: ") 
media2 = input("Digite a segunda nota: ") 
media3 = input("Digite a terceira nota: ") 
media4 = input("Digite a quarta nota: ") 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:31:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

not= array(eval(input("notas : ")))

vet= zeros(7,dtype=int)




-- ERROR:
File "XXXX", line 4
    not= array(eval(input()))
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:31:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(input("notas : ")))

vet= zeros(7,dtype=int)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:32:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(dtype=int("notas : ")))

vet= zeros(7,dtype=int)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:32:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval("notas : "))

vet= zeros(7,dtype=int)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:32:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(""))

vet= zeros(7,dtype=int)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:33:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(float(""))

vet= zeros(7,dtype=int)




-- ERROR:
File "XXXX", line 6
    vet= zeros(7,dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:35:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(float(""))

for i in range(1,4)
vet= zeros(7,dtype=int)




-- ERROR:
File "XXXX", line 7
    vet= zeros(7,dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:35:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array(eval(float(""))

for i in range(1,4):
vet= zeros(7,dtype=int)




-- ERROR:
File "XXXX", line 6
    for i in range(1,4):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:40:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

for i in range(1,4)
			  
vet= zeros(7,dtype=int)




-- ERROR:
File "XXXX", line 6
    for i in range(1,4)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:41:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])
soma=0
for i in range(1,4)
			  
vet= zeros(7,dtype=int)




-- ERROR:
File "XXXX", line 6
    for i in range(1,4)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:41:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)


for i in range(1,4)
			  
vet= zeros(7,dtype=int)




-- ERROR:
File "XXXX", line 9
    for i in range(1,4)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:42:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)

for i in range[0]			  



-- ERROR:
File "XXXX", line 8
    for i in range[0]			  
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:42:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)

	for i in range[0]			  



-- ERROR:
File "XXXX", line 8
    for i in range[0]			  
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:44:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)

for i in range(7):



-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:45:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)

for i in range(7):
-- ERROR:
File "XXXX", line 9
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:45:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)

for i in range(7)
-- ERROR:
File "XXXX", line 8
    for i in range(7)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:45:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)

for i in range(4)
-- ERROR:
File "XXXX", line 8
    for i in range(4)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:45:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)

	for i in range(4)
-- ERROR:
File "XXXX", line 8
    for i in range(4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:45:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)

for i in range[4]
-- ERROR:
File "XXXX", line 8
    for i in range[4]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:45:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)

for i in range[4]:
-- ERROR:
File "XXXX", line 9
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 02:47:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat= array([[3.4,5.5,7.8,9.9],[5.6,7.7,8.7,9.5],[7.4,8.5,9.8,9.9]])

vet= zeros(4,dtype=int)

for i in range(size(vet)):
-- ERROR:
File "XXXX", line 9
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
